# things-3-progress-tui

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  app.py  app.tcss  pyproject.toml  pytest.ini  requirements.txt  storage.py  test_data.py
.github/workflows/: publish-pypi.yml
lib/: action_refresh.py  data.py  detail.py  open_project.py  pin.py  progress.py  project.py  radial.py  refresh.py  search.py  storage.py
lib/refresh/: action_refresh.py  populate_sidebar.py  refresh_sidebar.py
tests/: __init__.py  __main__.py  test_data.py
